--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
   
   <!-- to create columns-- https://www.w3schools.com/howto/howto_css_three_columns.asp -->
 
+ <navbar-fixed-top>
 
   <div class="row">
     <div class="columnt"><h1>Futbol (Soccer) World Cup Exploration</h1></div>
     <div class="columnt"><img src="./static/pic/fifa-logo.png" alt="FIFA LOGO" style="width:100px;height:100px;"></div>
   </div>
 
+</navbar-fixed-top>
+
+
   <nav>
-    <h4>For additional information on World Cups, use this <link rel="alternate" href="atom.xml" type="application/atom+xml" title="Atom"></h4>
+    <h4>For additional information on World Cups, use this link.<link rel="alternate" href="atom.xml" type="application/atom+xml" title="Atom"></h4>
       <a href="templates/indexscroll.html">Go to World Cup History Page</a>
   </nav>
 
@@ -194,6 +198,11 @@
 
    </div>
 <div>
+
+  <nav>
+    <h4>For additional information on World Cups, use this link:<link rel="alternate" href="atom.xml" type="application/atom+xml" title="Atom"></h4>
+      <a href="templates/indexscroll.html">Go to World Cup History Page</a>
+  </nav>
 
   
       <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
