--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
     <style>
     </style>
 
-    <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
 
     <div class="navbar">
       <a href="templates/indexwc1.html"target="_blank">Confederation Performance</a>
@@ -28,7 +26,10 @@
       <a href="templates/indexscroll.html"target="_blank">Brief World Cup History</a>
       <a href="index.html" class="right">Home</a>
     </div>
-   
+
+    <div class="columnt"><h1>Futbol (Soccer) World Cup Exploration</h1></div>
+    <div class="columnt"><img src="./static/pic/fifa-logo.png" alt="FIFA LOGO" style="width:100px;height:100px;"></div>
+
    <div class="header">
 
         <h2> Which FIFA Confederation has the strongest average performance?</h2>
@@ -138,50 +139,7 @@
 
 
 <hr size="2" noshade>
-<!-- END OF CONFEDERATION PERFORMANCE ACROSS THE YEARS -->
 
-<!-- START EXPLORING PERFORMANCE OF CONFEDERATIONS ACCROSS THE YEARS -->
-<!-- <div class="header">
-    <h2> How is the performance of the FIFA confederations across the years?</h2>
-    <br />
-    <div class="container px-4 text-center">
-      <div class="row gx-5">
-        <div class="col">
-         <div class="p-3 border bg-light">
-
-                <h5>Futbol continues to develop in Asia and Africa</h5>
-                <h7>Select Metric and click button:</h7>
-                <select id="select5"></select>
-                <button id="Buton5">Click Button</button>
-                <br /><br />
-                <div id="chart3"></div>
-
-         </div>
-        </div>
-      </div>
-
-      <div class="row gx-5">
-        <div class="col">
-         <div class="p-3 border bg-light">
-
-          
-              <h5>However, Asia and Africa have declined performance in the last world cups</h5>
-              <h7>Select Confederation and click button:</h7>
-              <select id="select6"></select>
-              <button id="Buton6">Click Button</button>
-              <br /><br />
-
-              <div id="chart3a"></div>
-
-
-         </div>
-        </div>
-      </div>  
-
-    </div>
-  </div> -->
-
-  <!-- END OF EXPLORING CONFEDERATION PERFORMANCE ACROSS YEARS -->
 
 
     <!-- Optional JavaScript -->
