--- a/index.html
+++ b/index.html
@@ -29,19 +29,37 @@
     </div>
 
     <div class="columnt"><h1>Futbol (Soccer) World Cup Exploration</h1></div>
-    <div class="columnt"><img src="./static/pic/fifa-logo.png" alt="FIFA LOGO" style="width:100px;height:100px;"></div>
+   
 
    <div class="header">
 
-        <h2> Which FIFA Confederation has the strongest average performance?</h2>
+    <!-- CONTAINER FOR THE OPENING SECTION -->
+
+    <div class="row g-0 text-left">
+      <div class="col-sm-6 col-md-7">
+
+        <h2> Which FIFA Confederation has the strongest performance?</h2>
         <br />
         <p>
           FIFA, founded in 1904, is the international governing body for football, beach football and futsal. FIFA divides the 
           countries in six regions (AFC, CAF, CONCACAF, CONMEBOL, OFC, UEFA). Each confederation implement an eliminatory process to define
           the countries representing them in the Wold Cup, which take place every 4 year. There have been 21 world cups 
           within 1930 and 2018.  UEFA (Europe) is the strongest confederation with the richest and best local leagues.  The following graphs explore
-          the performance of the confederations in the World Cups.  For your reference, the FIFA confederations are the following:
+          the performance of the confederations in the World Cups. 
         </p>
+        <br />      <br />      <br />
+     
+      </div>
+      <div class="col-6 col-md-5">
+        <div class="columnt"><img src="./static/pic/fifa-logo.png" alt="FIFA LOGO" style="width:250px;height:250px;"></div>
+
+      </div>
+    </div>
+
+    <div class="row g-0 text-left">
+      <div class="col-sm-6 col-md-7">
+        <h4>The FIFA confederations are the following:</h4>
+        <br />
         <ol>
           <li>AFC = Asian Football Confederation in Asia and Australia.</li>
           <li>CAF = Confédération Africaine de Football in Africa.</li>
@@ -51,6 +69,13 @@
           <li>UEFA = Union of European Football Associations</li>
         </ol>
 
+      </div>
+      <div class="col-6 col-md-5">
+        <div class="columnt"><img src="./static/pic/fifa_confede.jpeg" alt="FIFA LOGO" style="width:250px;height:250px;"></div>
+      </div>
+    </div>       
+   
+    <br />      <br />      <br />
 
     <!-- OVERALL PERFORMANCE BY CONFEDERATION -->
         <div class="container px-2 text-center">
