--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="static/css/style1.css" />
 
     <style>
-    </style>
+
+  </style>
 
   </head>
   <body>
@@ -90,9 +91,8 @@
             <div class="p-3 border bg-light">
                 <h5>CONMEBOL has slightly better average performance across all world cups.</h5>
                 <div> 
-                  <h7>Select Metric, Click button:</h7>
+                  <h7>Select Metric:</h7>
                   <select id="select3"></select>
-                  <button id="Buton2">Click Button</button>
                 </div>
                 <div id="chart0"></div>
             </div>
@@ -144,7 +144,6 @@
         <h8>Select Year & Metric:</h8>
         <select id="select1"></select>
         <select id="select2"></select>
-        <button id="Buton1">Click Button</button>
         <div id="chart1"></div>   
 
        </div>
@@ -187,6 +186,11 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
+    <!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64">
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+</footer> 
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
 
  
@@ -196,10 +200,15 @@
     <script src="./static/js/fifa.js"></script>
     <script src="./static/js/vars.js"></script>
     <!-- <script src="../static/js/script.js"></script> -->
+
     <script src="./static/js/scriptwc.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  
+
+  
+  
   </body>
 </html>
